[project]
name = "openpyd-priv"
version = "0.1.0"
description = ""
authors = [
    {name = "Anderson B Silva (Ander)",email = "andersoncomercial@pm.me"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
python-dotenv = "^1.1.1"
openai = "^1.102.0"

